--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.generate-ddl=true
 
 server.error.include-message=always
 logging.level.org.springframework.web: DEBUG
+
+
+server.servlet.context-path=/api
